--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,7 @@ services:
       - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
+    # Đã bỏ healthcheck ở đây
 
   springboot-app:
     build: .
@@ -27,7 +23,7 @@ services:
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
     depends_on:
-      mysql:
-        condition: service_healthy
+      - mysql  # Dùng kiểu đơn giản, không kiểm tra health
+
 volumes:
   mysql_data:
